tests/errors/ring_buffer_peek_empty_panics.ptt
use std/ring_buffer

spark {
  r is ring_with_cap of int (4)
  yell(r.peek())
}
